[gd_scene load_steps=26 format=2]

[ext_resource path="res://Assets/fonts/Inconsolata-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/GUI.gd" type="Script" id=2]
[ext_resource path="res://Assets/fonts/UncrackedFreeTrial-X3WjK.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/images/Heart.png" type="Texture" id=4]
[ext_resource path="res://Assets/fonts/SamuraiBlast-8MnyD.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/fonts/Game_OVer.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Sounds/Menu Selection Click.wav" type="AudioStream" id=7]
[ext_resource path="res://Assets/fonts/Superado.ttf" type="DynamicFontData" id=8]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 17.4935, 37.8416, 20.1083, 20.1083 )

[sub_resource type="Theme" id=15]

[sub_resource type="DynamicFont" id=8]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.266667, 0.47451, 0.290196, 0.866667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.14902, 0.14902, 0.14902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 25
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.333333, 0.333333, 0.0196078, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.443137, 0.443137, 0.0196078, 1 )
border_width_bottom = 5
border_color = Color( 0.238281, 0.238281, 0.0127983, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.206055, 0.206055, 0.0110674, 1 )
shadow_size = 5

[sub_resource type="Theme" id=20]
Button/styles/hover = SubResource( 18 )
Button/styles/normal = SubResource( 19 )

[sub_resource type="DynamicFont" id=21]
size = 40
extra_spacing_top = 10
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=22]
resource_name = "Transition"
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_end_animation"
} ]
}

[sub_resource type="Theme" id=24]

[sub_resource type="StyleBoxFlat" id=25]
corner_radius_top_left = 10
corner_radius_bottom_right = 10

[sub_resource type="DynamicFont" id=23]
size = 30
font_data = ExtResource( 8 )

[node name="GUI" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 24, 30 )
scale = Vector2( 2, 2.05 )
texture = SubResource( 11 )

[node name="Panel2" type="Panel" parent="."]
modulate = Color( 0.372549, 0.345098, 0.321569, 0.427451 )
margin_left = 166.0
margin_top = 568.0
margin_right = 166.0
margin_bottom = 588.0
theme = SubResource( 15 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0
mouse_filter = 2

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1000.0
margin_bottom = 576.0
mouse_filter = 2

[node name="MiddleRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 1000.0
margin_bottom = 552.0
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 12.0
alignment = 2

[node name="BottomRow" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 556.0
margin_right = 1000.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 20 )
mouse_filter = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/BottomRow"]
margin_right = 1000.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 169, 10 )
mouse_filter = 2
size_flags_horizontal = 3

[node name="HealtBar" type="ProgressBar" parent="MarginContainer/Rows/BottomRow/HBoxContainer"]
margin_right = 150.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 20 )
mouse_filter = 2
size_flags_vertical = 1
custom_fonts/font = SubResource( 8 )
custom_styles/fg = SubResource( 9 )
custom_styles/bg = SubResource( 10 )
value = 100.0
percent_visible = false

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[node name="CurrentAmmo" type="Label" parent="."]
margin_left = 172.0
margin_top = 571.0
margin_right = 184.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 12 )
text = "30"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 189.0
margin_top = 569.0
margin_right = 193.0
margin_bottom = 589.0
mouse_filter = 2

[node name="MaxAmmo" type="Label" parent="."]
margin_left = 197.0
margin_top = 571.0
margin_right = 207.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 13 )
text = "10"

[node name="CurrentLifes" type="Label" parent="."]
margin_left = 50.0
margin_top = 17.0
margin_right = 74.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 16 )
text = "X 2"
valign = 1

[node name="GameOver" type="Label" parent="."]
modulate = Color( 0.384314, 0.0823529, 0.0823529, 1 )
margin_left = 138.0
margin_top = 256.0
margin_right = 876.0
margin_bottom = 351.0
custom_fonts/font = SubResource( 17 )
text = "GAME OVER"

[node name="Volver" type="Button" parent="."]
margin_left = 857.0
margin_top = 11.0
margin_right = 1015.0
margin_bottom = 69.0
theme = SubResource( 20 )
custom_fonts/font = SubResource( 21 )
text = "MENU"

[node name="Selection" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Transition = SubResource( 22 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1028.0
margin_bottom = 603.0
color = Color( 1, 1, 1, 0 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0.411765 )
margin_left = 473.0
margin_top = 4.0
margin_right = 549.0
margin_bottom = 38.0
theme = SubResource( 24 )
custom_styles/panel = SubResource( 25 )

[node name="TimeCounter" type="Label" parent="."]
margin_top = 2.0
margin_right = 1021.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 23 )
text = "90"
align = 1
valign = 1

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout_achivement"]
